--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ local.sbt
 # Mac files
 .DS_Store
 
+# VsCode files
+.metals/
+
 # SBT configuration files
 # remove if specific version of SBT is required
 project/build.properties 
